# raj

./: LICENSE  README.md
src/main/: AndroidManifest.xml
src/main/assets/: leftTopOrigin.glb
src/main/cpp/: CMakeLists.txt
src/main/cpp/src/: CMakeLists.txt  app.cpp
src/main/cpp/src/libs/gestureDetector/: CMakeLists.txt  dragDetector.cpp  dragDetector.hpp  gestureDetector.cpp  gestureDetector.hpp  tapDetector.cpp  tapDetector.hpp
src/main/cpp/src/libs/glCtx/: CMakeLists.txt  glCtx.cpp  glCtx.hpp
src/main/cpp/src/libs/gltfLetters/: CMakeLists.txt  gltfLetters.cpp  gltfLetters.hpp
src/main/cpp/src/libs/gltfLoader/: CMakeLists.txt  gltfLoader.cpp  gltfLoader.hpp  tinygltf.cpp
src/main/cpp/src/libs/gltfMeshs/: CMakeLists.txt  gltfMeshs.cpp  gltfMeshs.hpp
src/main/cpp/src/libs/rajAndroid/: CMakeLists.txt  rajAndroid.cpp  rajAndroid.hpp
src/main/cpp/src/libs/rajErr/: CMakeLists.txt  rajErr.hpp
src/main/cpp/src/libs/rajProg/: CMakeLists.txt  rajProg.cpp  rajProg.hpp
src/main/cpp/src/libs/rajQ/: CMakeLists.txt  rajQ.cpp  rajQ.hpp
src/main/cpp/src/libs/ui/: CMakeLists.txt
src/main/cpp/src/libs/ui/letterNode/: letterNode.cpp  letterNode.hpp
src/main/cpp/src/libs/ui/linearLayout/: linearLayout.cpp  linearLayout.hpp
src/main/cpp/src/libs/ui/pickingTex/: pickingTex.cpp  pickingTex.hpp
src/main/cpp/src/libs/ui/rajScrollBar/: rajScrollBar.cpp  rajScrollBar.hpp
src/main/cpp/src/libs/ui/rectMesh/: rectMesh.cpp  rectMesh.hpp
src/main/cpp/src/libs/ui/rectNode/: rectNode.cpp  rectNode.hpp
src/main/cpp/src/libs/ui/textNode/: textNode.cpp  textNode.hpp
src/main/cpp/src/libs/vec2/: CMakeLists.txt  vec2.cpp  vec2.hpp
